--- a/CB-24-Proyecto-FAB-Frontend/src/index.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/index.css
@@ -1,11 +1,6 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,56 +8,173 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  width: 100%;
   min-height: 100vh;
+  background-color: #eeeeee;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.flex {
+  display: flex;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  color: #ffffff;
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+              border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.btn-dark-blue {
+  color: #ffffff;
+  background-color: #000020;
+  border-color: #000020;
+}
+
+.btn-blue {
+  color: #ffffff;
+  background-color: #171a4a;
+  border-color: #171a4a;
+}
+
+.btn-light-blue {
+  color: #ffffff;
+  background-color: #2f2c79;
+  border-color: #2f2c79;
+}
+
+.btn-dark {
+  color: #ffffff;
+  background-color: #131313;
+  border-color: #131313;
+}
+
+.btn-black {
+  color: #ffffff;
+  background-color: #090808;
+  border-color: #090808;
+}
+
+.btn-dark-blue:hover {
+  background-color: #000033;
+  border-color: #000033;
+}
+
+.btn-blue:hover {
+  background-color: #2c2f70;
+  border-color: #2c2f70;
+}
+
+.btn-light-blue:hover {
+  background-color: #4845a1;
+  border-color: #4845a1;
+}
+
+.btn-dark:hover {
+  background-color: #292929;
+  border-color: #292929;
+}
+
+.btn-black:hover {
+  background-color: #1a1817;
+  border-color: #1a1817;
+}
+
+.form-control {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #ffffff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-control:focus {
+  color: #495057;
+  background-color: #ffffff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.text-white {
+  color: #ffffff;
+}
+
+.text-dark-blue {
+  color: #000020;
+}
+
+.text-blue {
+  color: #171a4a;
+}
+
+.text-light-blue {
+  color: #2f2c79;
+}
+
+.text-dark {
+  color: #131313;
+}
+
+.text-black {
+  color: #090808;
+}
+
+.text-white {
+  color: #ffffff;
+}
+
+.form-group {
+  margin-bottom: 1rem; 
+}
+
+.form-group > label {
+  margin-bottom: 0.5rem;
+}
+
+.form-group > input,
+.form-group > select,
+.form-group > textarea {
+  display: block; 
+  width: 100%;
+  padding: 0.375rem 0.75rem; 
+  font-size: 1rem; 
+  font-weight: 400; 
+  line-height: 1.5;
+  color: #495057; 
+  background-color: #fff; 
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem; 
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-group > input:focus,
+.form-group > select:focus,
+.form-group > textarea:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
