--- a/CB-24-Proyecto-FAB-Frontend/src/index.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/index.css
@@ -6,13 +6,16 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #171A4A;
 }
 
-body {
+#root {  
   margin: 0;
   width: 100%;
-  min-height: 100vh;
-  background-color: #eeeeee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
 }
 
 .flex {
