--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/operations-menu/operations-menu.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/operations-menu/operations-menu.css
@@ -1,47 +1,68 @@
-.main-menu-container {
-    width: 98%;
-    height: 98vh;
-    border-radius: 5px;
-    background-color: white;
-    overflow-y: auto;
+.operations-menu-container {
+    height: 100vh;
+    width: 100%;
+    border-radius: 15px;
+    padding: 16px;
+    background-color: #eee;
+    color: #000;
 }
 
-.main-menu-options {
+.operations-menu-container header {
     display: flex;
-    height: 80vh;
+    width: 100%;
+    font-weight: bold;
+    align-items: center;
+    gap: 8px;
+    font-size: 16pt;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.back-icon {
+    display: flex;
+    align-items: center;
+}
+
+h1 {
+    margin-top: 0;
+    font-size: 32pt;
+}
+
+.menu-options {
+    display: flex;
+    margin-bottom: 16px;
+    gap: 16px;
+}
+
+.main-options .option {
+    height: 120px;
+}
+
+.option {
+    display: flex;
+    width: 300px;
+    height: 50px;
+    background-color: #000020;
+    color: #fff;
+    font-size: 16pt;
+    padding: 16px 32px;
+    border-radius: 16px;
+    text-decoration: none;
     justify-content: center;
-    justify-items: center;
     align-items: center;
-    flex-wrap: wrap;
+    font-weight: bold;
+    transition: opacity 0.2s ease-in-out;
 }
 
-    .main-menu-options .card {
-        width: 400px;
-        height: 230px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 1rem 10rem;
-        background-color: #000020;        
-        color: white;
-        border-radius: 5px;
-        cursor: pointer;        
-        font-size: 30px;
-        text-decoration: none;
-    }
 
-        .main-menu-options .card span{
-            margin-left: 1rem;
-        }
-
-        .main-menu-options .card svg{
-            font-size: 50px;
-        }
-
-.main-menu-footer {
+.option p {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 6px;
 }
 
 .goback-arrow{
