--- a/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/menu/menu.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/menu/menu.css
@@ -1,5 +1,5 @@
 .maintenance-menu-container {
-    height: 90vh;
+    height: 90%;
     width: 95%;
     border-radius: 16px;
     padding: 16px;
@@ -36,6 +36,22 @@ h1 {
     display: flex;
     margin-bottom: 16px;
     gap: 16px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* Tablets */
+@media screen and (min-width: 768px) and (max-width: 1047px) {
+    .menu-options {
+        width: 750px;
+    }
+}
+
+/* Moviles */
+@media screen and (max-width: 768px) {
+    .menu-options {
+        width: 370px;
+    }
 }
 
 .main-options .option {
@@ -49,13 +65,15 @@ h1 {
     background-color: #000020;
     color: #fff;
     font-size: 16pt;
-    padding: 16px 32px;
+    padding: 8px;
     border-radius: 16px;
     text-decoration: none;
     justify-content: center;
     align-items: center;
     font-weight: bold;
     transition: opacity 0.2s ease-in-out;
+    flex-grow: 1;
+    flex-basis: 200;
 }
 
 span:hover>.menu-options> :not(:hover) {
