--- a/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-menu/maintenance-menu.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-menu/maintenance-menu.css
@@ -1,3 +1,17 @@
+/* Tablets */
+@media screen and (min-width: 768px) and (max-width: 1047px) {
+    .maintenance-menu-container .menu-options {
+        width: 750px;
+    }
+}
+
+/* Moviles */
+@media screen and (max-width: 768px) {
+    .maintenance-menu-container .menu-options {
+        width: 370px;
+    }
+}
+
 .maintenance-menu-container {
     height: 90%;
     width: 95%;
@@ -16,23 +30,23 @@
     font-size: 16pt;
 }
 
-main {
+.maintenance-menu-container main {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.back-icon {
+.maintenance-menu-container .back-icon {
     display: flex;
     align-items: center;
 }
 
-h1 {
+.maintenance-menu-container h1 {
     margin-top: 0;
     font-size: 32pt;
 }
 
-.menu-options {
+.maintenance-menu-container .menu-options {
     display: flex;
     margin-bottom: 16px;
     gap: 16px;
@@ -40,25 +54,11 @@ h1 {
     justify-content: center;
 }
 
-/* Tablets */
-@media screen and (min-width: 768px) and (max-width: 1047px) {
-    .menu-options {
-        width: 750px;
-    }
-}
-
-/* Moviles */
-@media screen and (max-width: 768px) {
-    .menu-options {
-        width: 370px;
-    }
-}
-
-.main-options .option {
+.maintenance-menu-container .main-options .option {
     height: 120px;
 }
 
-.option {
+.maintenance-menu-container .option {
     display: flex;
     width: 300px;
     height: 50px;
@@ -76,18 +76,18 @@ h1 {
     flex-basis: 200;
 }
 
-span:hover>.menu-options> :not(:hover) {
+.maintenance-menu-container span:hover>.menu-options> :not(:hover) {
     opacity: 0.6;
 }
 
-.option p {
+.maintenance-menu-container .option p {
     display: flex;
     align-items: center;
     gap: 6px;
 }
 
-footer,
-footer button {
+.maintenance-menu-container footer,
+.maintenance-menu-container footer button {
     display: flex;
     align-items: center;
     gap: 8px;
