--- a/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/OperationsLayout.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/OperationsLayout.css
@@ -12,7 +12,8 @@
 }
 .side-bar-container{
     background-color: white;
-    width: 25%;
-    height: auto;
+    width: 30rem;
+    height: 60rem;
     margin: 3vh;
+    border-radius: 20px;
 }
