Correccion responsive page

--- a/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-list/maintenance-work-order-list.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-list/maintenance-work-order-list.css
@@ -11,7 +11,7 @@
         max-width: 370px;
     }
     .maintenance-aeronave-content{
-      overflow-x: hidden;
+      overflow-x: auto;
     }
     
 }
