--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-register-management/airship-register-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-register-management/airship-register-management.css
@@ -9,6 +9,8 @@
     color: #000000;
     margin-top: 30px;
     margin-bottom: 30px;
+    margin: auto;
+    overflow-y: auto;
 }
 
 /* Estilos para el contenido dentro del contenedor */
