--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-management.css
@@ -54,3 +54,8 @@ tr:hover {
   margin-right: 5px;
   font-size: 20px;
 }
+
+.pilot-management-logo{
+  display: flex;
+  justify-content: flex-end;
+}
