--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-register.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-register.css
@@ -69,3 +69,8 @@
     margin-top: 20px; /* Ajuste el margen superior según sea necesario */
     font-size: 15px;
 }
+
+.register-pilot-logo{
+    display: flex;
+    justify-content: flex-end;
+}
