Pagina Editar de AeroNave y correcciones

--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-management/airship-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-management/airship-management.css
@@ -5,9 +5,9 @@
     padding: 15px;
     background-color: #ffffff;
     color: #000000;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-bottom: 30px;
-    margin: auto;
+    
     overflow-y: auto;
 }
 
@@ -89,10 +89,18 @@
     /* Estilos existentes */
     font-size: 5px;
     border-radius: 50%;
-    margin-left: 20px;
+    margin-left: 30px;
+    margin-right: auto;
 }
 
 .airship-management-logo{
     display: flex;
     justify-content: flex-end;
+}
+.airship-management-container .user-info-container {
+    display: flex;
+    align-items: center;
+}
+.airship-management-container .airship-management-logo {
+    margin-right: 50px; /* Ajusta la cantidad de espacio desde la derecha */
 }
