--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-management/airship-edit-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-management/airship-edit-management.css
@@ -1,6 +1,5 @@
 
-
-.airship-register-management-container {
+.airship-edit-management-container {
     height: 88vh;
     width: 95%;
     border-radius: 10px;
@@ -13,7 +12,7 @@
 }
 
 /* Estilos para el contenido dentro del contenedor */
-.airship-register-management-container .aeronave-container {
+.airship-edit-management-container .aeronave-container {
     width: 90%; /* Cambiar el ancho según sea necesario */
     margin: 40px auto;
     border: 1px solid #f3e9e9;
@@ -27,7 +26,7 @@
 
 
 
-.airship-register-management-container .info-section {
+.airship-edit-management-container .info-section {
     display: flex;
     flex-wrap: wrap; /* Permitir envolver elementos en múltiples líneas */
     justify-content: space-between;
@@ -35,25 +34,25 @@
     padding: 0 10px;
 }
 
-.airship-register-management-container .info-section .label-input-container {
+.airship-edit-management-container .info-section .label-input-container {
     width: calc(50% - 20px); /* Ajustar el ancho para un elemento en una fila */
     margin-bottom: 20px;
 }
 
 /* Estilos para pantalla reducida */
 @media screen and (max-width: 768px) {
-    .airship-register-management-container .info-section .label-input-container {
+    .airship-edit-management-container .info-section .label-input-container {
         width: 100%; /* Cambia el ancho para que cada elemento ocupe toda la fila */
         margin-bottom: 20px; /* Añade un margen inferior para separar los elementos */
     }
 }
 
 
-.airship-register-management-container .info-section .label-input-container label {
+.airship-edit-management-container .info-section .label-input-container label {
     font-size: 25px; /* Ajustar el tamaño de la fuente del label */
 }
 
-.airship-register-management-container .info-section .label-input-container input[type="text"] {
+.airship-edit-management-container .info-section .label-input-container input[type="text"] {
     width: calc(100% - 10px); /* Ajustar el ancho del input */
     font-size: 18px; /* Aumentar el tamaño de la fuente del input */
     padding: 10px 2px; /* Agregar espacio vertical dentro del input */
@@ -62,7 +61,7 @@
 
 
 
-.airship-register-management-container .goback-arrow {
+.airship-edit-management-container .goback-arrow {
     margin-top: 40px;
     color: #000000;
     margin-right: 40px;
@@ -71,14 +70,14 @@
 
 
 
-.airship-register-management-container .aeronave-content {
+.airship-edit-management-container .aeronave-content {
     display: flex;
     flex-direction: column;
     align-items: center; /* Centrar horizontalmente los elementos */
     overflow-x: auto;
 }
 
-.airship-register-management-container .aeronave-container .register-button {
+.airship-edit-management-container .aeronave-container .edit-button {
     color: white;
     background-color: #171A4A;
     padding: 10px 20px;
@@ -89,7 +88,7 @@
     font-size: 15px;
 }
 
-.airship-register-management-logo{
+.airship-edit-management-logo{
     display: flex;
     justify-content: flex-end;
 }
@@ -103,11 +102,11 @@
 
 
 
-.airship-register-management-container .info-section input[type="text"] {
+.airship-edit-management-container .info-section input[type="text"] {
     width: 100%;
 }
 
-.airship-register-management-container .small-text {
+.airship-edit-management-container .small-text {
     font-size: 30px; /* Ajusta el tamaño de la letra según sea necesario */
     font-weight: normal; /* Elimina la negrita */
     margin-top: -50px; /* Ajusta el margen superior según sea necesario */
@@ -116,9 +115,9 @@
 
 
 
-.airship-register-management-container input[type="text"],
+.airship-edit-management-container input[type="text"],
 
-.airship-register-management-container .table-style {
+.airship-edit-management-container .table-style {
     border-radius: 10px;
     padding: 2px;
     width: 10%; /* Cambiar el ancho según sea necesario */
@@ -128,14 +127,14 @@
 
 
 
-.airship-register-management-container .username {
+.airship-edit-management-container .username {
     /* Estilos existentes */
     margin-left: 80px; /* Ajusta el valor según lo necesites */
     font-size: 22px;
     
 }
 
-.airship-register-management-container .forma {
+.airship-edit-management-container .forma {
     /* Estilos existentes */
     font-size: 5px;
     border-radius: 50%;
@@ -145,10 +144,10 @@
 
 
 
-.airship-register-management-container .airship-user-info-container {
+.airship-edit-management-container .airship-edit-user-info-container {
     display: flex;
     align-items: center;
 }
-.airship-register-management-container .airship-register-management-logo {
+.airship-edit-management-container .airship-edit-management-logo {
     margin-right: 50px; /* Ajusta la cantidad de espacio desde la derecha */
 }
