--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/recruitment/recruitment.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/recruitment/recruitment.css
@@ -1,6 +1,6 @@
 .recruitment-form-container {
     display: flex;
-    flex-direction: column; /* Ajuste para columna */
+    flex-direction: column;
     align-items: center;
     padding: 20px;
     background-color: #ffffff;
@@ -11,10 +11,9 @@
 .recruitment-form {
     background-color: #f0f0f0;
     padding: 2rem;
-    border-radius: 7px;
-    box-shadow: rgba(0, 0, 0, 0.5) 1.95px 1.95px 10px;
+    border-radius: 1px;
     width: 100%;
-    max-width: 800px;
+    max-width: 1000px;
     overflow-y: auto;
     color: #000000;
 }
@@ -59,8 +58,7 @@
 
 .recruitment-form input[type="text"],
 .recruitment-form input[type="email"],
-.recruitment-form input[type="date"],
-.recruitment-form input[type="file"] {
+.recruitment-form input[type="date"] {
     padding: 0.5rem;
     border: 1.5px solid #333;
     border-radius: 3px;
@@ -74,11 +72,21 @@
 
 .recruitment-form .form-group.file-upload {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    margin-bottom: 1rem;
 }
 
 .recruitment-form .form-group.file-upload label {
-    margin-right: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+.recruitment-form input[type="file"] {
+    display: none; /* Oculta el input de archivo real */
 }
 
 .recruitment-form button {
@@ -97,4 +105,14 @@
 
 .recruitment-form button:hover {
     background-color: #000;
+}
+
+.file-upload-label {
+    display: inline-block;
+    cursor: pointer;
+}
+
+.file-upload-label img {
+    width: 50px; /* Ajusta el tamaño según sea necesario */
+    height: 50px;
 }
